# EscTp1RayTracer

./: .gitignore  CMakeLists.txt
scripts/: run.sh  set_env.sh
src/: CMakeLists.txt  debug.h  intersect.h  main.cpp
src/ispc/: intersect.crap.txt  intersect.ispc  ispc_helpers.h  test.ispc  trace.ispc
src/models/cornell/: CornellBox-Empty-CO.mtl  CornellBox-Empty-Squashed.mtl  CornellBox-Empty-White.mtl  CornellBox-Glossy-Floor.mtl  CornellBox-Sphere.mtl  CornellBox-Water.mtl
src/scene/: aabb.cpp  aabb.h  bvh.cpp  bvh.h  helpful.h  hittable.cpp  hittable.h  hittable_list.h  scene.h  sceneloader.h
src/simplify/: c_intersect.c  c_intersect.h  c_triangle.c  c_triangle.h  c_vec.c  c_vec.h  flatten.cpp  flatten.h  flatten_iscp.cpp  flatten_iscp.h
